--- a/app/views/pages/main.html.ejs
+++ b/app/views/pages/main.html.ejs
@@ -1,7 +1,7 @@
 <% layout('../layout.html') -%>
 <h1>Check out my products!!</h1>
 <div ng-controller="ProductCtrl">
-	<form>
+	<form ng-submit="save(newRecord)">
 		<table cellspacing="0">
 			<tr>
 				<th>ID</th>
