--- a/app/views/layout.html.ejs
+++ b/app/views/layout.html.ejs
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html ng-app>
   <head>
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular-resource.min.js"></script>
+    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script>    
     <script src="/angular_product_controller.js"></script>
     <title><%= title %></title>
     <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" />    
