Added passport and twitter auth strategy example

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -9,4 +9,6 @@
 	</p>
 	<p>Click at this<a href="/list" > sample </a> link to view the products list example.
 	</p>
+	<p ng-controller="AuthCtrl">Test twitter auth here (with passportjs) <a ng-click="auth()">twitter</a>
+	</p>	
 </div>      
